[gd_scene load_steps=2 format=3 uid="uid://dw35byb5qogmh"]

[ext_resource type="Script" uid="uid://dsqejfpdk62og" path="res://scenes/2d/startup/startup_screen.gd" id="1_fy30w"]

[node name="StartupScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fy30w")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="CompanyLogo" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Cognitive Dynamics"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="ProductName" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Welcome to TypingMaster Pro v2.3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Subtitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Thank you for choosing Cognitive Dynamics software solutions"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer3" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Initializing..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 20)
layout_mode = 2
show_percentage = false

[node name="Spacer4" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Copyright" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Â© 1994 Cognitive Dynamics Inc."
horizontal_alignment = 1
vertical_alignment = 1
